<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/buttonSelectImage"
        app:srcCompat="@mipmap/icon"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="30dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextName"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_alignStart="@+id/textView7"
        android:text="Name:"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="128dp" />

    <Button
        android:id="@+id/buttonSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonAddItem"
        android:layout_marginTop="16dp"
        android:onClick="SelectImg"
        android:text="Select Image"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDescription"
        android:layout_alignEnd="@+id/buttonCamera"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="13dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="116dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextDescription"
        android:layout_alignBottom="@+id/editTextDescription"
        android:layout_alignParentStart="true"
        android:layout_marginStart="22dp"
        android:text="Description:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="194dp" />

    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextCategory"
        android:layout_alignStart="@+id/editTextName"
        android:layout_marginBottom="41dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="176dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="70dp"
        android:layout_height="17dp"
        android:layout_above="@+id/editTextPrice"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginBottom="44dp"
        android:text="Category:"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/editTextCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_alignStart="@+id/editTextDescription"
        android:background="@color/background"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="240dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextDiscount"
        android:layout_alignStart="@+id/textView8"
        android:layout_marginBottom="46dp"
        android:text="Price:"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="323dp" />

    <EditText
        android:id="@+id/editTextPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView9"
        android:layout_alignBottom="@+id/textView9"
        android:layout_alignStart="@+id/editTextCategory"
        android:background="@color/background"
        android:ems="10"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="306dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editTextDiscount"
        android:layout_alignBottom="@+id/editTextDiscount"
        android:layout_alignStart="@+id/textView9"
        android:text="Discount:"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="389dp" />

    <EditText
        android:id="@+id/editTextDiscount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonAddItem"
        android:layout_alignStart="@+id/editTextPrice"
        android:layout_marginBottom="19dp"
        android:background="@color/background"
        android:ems="10"
        android:inputType="number"
        tools:layout_editor_absoluteX="102dp"
        tools:layout_editor_absoluteY="382dp" />

    <Button
        android:id="@+id/buttonAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="66dp"
        android:text="Add Item"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="467dp" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonSelectImage"
        android:layout_alignBottom="@+id/buttonSelectImage"
        android:layout_toEndOf="@+id/buttonSelectImage"
        android:background="@android:drawable/ic_menu_camera" />
</RelativeLayout>